[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameContainer.gd" type="Script" id=1]
[ext_resource path="res://Objects/GameFileArranger.tscn" type="PackedScene" id=2]
[ext_resource path="res://gfx/rightarrow.png" type="Texture" id=3]
[ext_resource path="res://gfx/leftarrow.png" type="Texture" id=4]
[ext_resource path="res://gfx/uparrow.png" type="Texture" id=5]

[node name="GameContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowContainer" type="Control" parent="."]
margin_left = 100.0
margin_top = 40.0
margin_right = 750.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameFileArranger" parent="WindowContainer" instance=ExtResource( 2 )]
margin_top = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="WindowContainer"]
margin_right = 300.0
margin_bottom = 256.0
rect_scale = Vector2( 0.25, 0.25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="TextureButton" parent="WindowContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 256.0
texture_normal = ExtResource( 4 )

[node name="Up" type="TextureButton" parent="WindowContainer/HBoxContainer"]
margin_left = 260.0
margin_right = 516.0
margin_bottom = 256.0
texture_normal = ExtResource( 5 )

[node name="Next" type="TextureButton" parent="WindowContainer/HBoxContainer"]
margin_left = 520.0
margin_right = 776.0
margin_bottom = 256.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="URI" type="Label" parent="WindowContainer/HBoxContainer"]
margin_left = 780.0
margin_top = 121.0
margin_right = 883.0
margin_bottom = 135.0
text = "Project Notes > "

[node name="HBoxContainer2" type="HBoxContainer" parent="WindowContainer"]
margin_top = 500.0
margin_right = 800.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="WindowContainer/HBoxContainer2"]
margin_right = 37.0
margin_bottom = 14.0
text = "Timer"

[node name="Score" type="Label" parent="WindowContainer/HBoxContainer2"]
margin_left = 41.0
margin_right = 92.0
margin_bottom = 14.0
text = "Score: 0"

[node name="ChatContainer" type="Control" parent="."]
margin_left = 775.0
margin_top = 40.0
margin_right = 950.0
margin_bottom = 550.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}
